--- a/sections/store-locator.liquid
+++ b/sections/store-locator.liquid
@@ -22,10 +22,8 @@
 <div class="st-bg-color store-locator">
   <div class="page-width section-{{ section.id }}-padding">
     <h2 class="page-title {{ section.settings.heading_size }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}">
-      {%- if section.settings.page.title != blank -%}
-        {{ section.settings.heading_title | capitalize }}
-      {%- else -%}
-        {{ 'sections.page.title' | t }}
+      {%- if section.settings.heading != blank -%}
+        {{ section.settings.heading | capitalize }}
       {%- endif -%}
     </h2>
     <store-locator>
